Upload the frontpage video

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <br>
     <!--<a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
 	<iframe width="640" height="360"
-		src="http://www.youtube.com/embed/EbA81r1CdNU?autoplay=0">
+		src="http://www.youtube.com/embed/JeD8sFhLzVQ?autoplay=0" allowfullscreen>
 	</iframe>
   </div>
 </header>
