--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -70,133 +69,21 @@
   </div>
 </header>
 
-  <section id="about" class="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-        <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
-      </div>
-    </div>
-    <!-- /.row -->
-  </div>
-  <!-- /.container -->
-</section>
-
-  <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-<section id="services" class="services bg-primary">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-lg-10 col-lg-offset-1">
-        <h2>Our Services</h2>
-        <hr class="small">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-compass fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-flask fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-shield fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-        </div>
-        <!-- /.row (nested) -->
-      </div>
-      <!-- /.col-lg-10 -->
-    </div>
-    <!-- /.row -->
-  </div>
-  <!-- /.container -->
-</section>
-
-  <aside class="callout">
-  <div class="text-vertical-center">
-    <h1>Vertically Centered Text</h1>
-  </div>
-</aside>
 
   <section id="portfolio" class="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1 text-center">
-        <h2>Our Work</h2>
+        <h2>Meet Ben, Joe, Sara, and Tanya, the creators of FooScan</h2>
         <hr class="small">
         <div class="row">
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
-                <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="portfolio-item">
-              <a href="#">
-                <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="portfolio-item">
-              <a href="#">
-                <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="portfolio-item">
-              <a href="#">
-                <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
-              </a>
+			  <center><img src="img/meet_the_team.jpg"></center>
             </div>
           </div>
         </div>
         <!-- /.row (nested) -->
-        <a href="#" class="btn btn-dark">View More Items</a>
       </div>
       <!-- /.col-lg-10 -->
     </div>
@@ -205,41 +92,7 @@
   <!-- /.container -->
 </section>
 
-  <aside class="call-to-action bg-primary">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h3>The buttons below are impossible to resist.</h3>
-        <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-        <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
-      </div>
-    </div>
-  </div>
-</aside>
 
-  <section id="map" class="map">
-  <iframe id="map_iframe"
-    width="100%"
-    height="100%"
-    frameborder="0"
-    scrolling="no"
-    marginheight="0"
-    marginwidth="0"
-    src="https://maps.google.com/maps/embed/v1/place?key=AIzaSyA8H0jVz_6Hc273rqNYKQ6AAiBvQfVKmYQ&q=3481 Melrose Hill St,Los Angeles, CA 90029,"
-    allowfullscreen>
-  </iframe>
-  <br>
-  <small id="map_iframe"
-    width="100%"
-    height="100%"
-    frameborder="0"
-    scrolling="no"
-    marginheight="0"
-    marginwidth="0"
-    src="https://maps.google.com/maps/embed/v1/place?key=AIzaSyA8H0jVz_6Hc273rqNYKQ6AAiBvQfVKmYQ&q=3481 Melrose Hill St,Los Angeles, CA 90029,"
-    allowfullscreen>
-  </small>
-</section>
   <footer>
   <div class="container">
     <div class="row">
